# Render_Chamber

./: README.md
Bsc_src/: CMakeLists.txt
Bsc_src/header/: AverageLiver.h  ClusterGraph.h  ClusterHighlighting.h  ClusterScene.h  Clustering.h  ColorSource.h  HighlightInteractor.h  IdDistanceTupel.h  Liver.h  LiverDataLoader.h  MouseInteractorRubberBand.h  MouseInteractorStyle2.h  MoveAGlyph.h  PCA.h  QtInterface.h  RelativeDistance.h  RenderTupel.h  TreeStructure.h  mainWindow.h  vtkOFFReader.h
Bsc_src/res/: clusterHighlightning.ui  mainWindow.qrc  mainWindow.ui
Bsc_src/src/: AverageLiver.cpp  ClusterGraph.cpp  ClusterHighlighting.cpp  ClusterScene.cpp  Clustering.cpp  ColorSource.cpp  HighlightInteractor.cpp  IdDistanceTupel.cpp  Liver.cpp  LiverDataLoader - Kopie.cpp  LiverDataLoader.cpp  MouseInteractorRubberBand.cpp  MouseInteractorStyle2.cpp  PCA.cpp  QtInterface.cpp  RelativeDistance.cpp  RenderTupel.cpp  TreeStructure.cpp  main.cpp  mainWindow.cpp  vtkOFFReader.cxx
Msc_src/: CMakeLists.txt
Msc_src/Voxelization_Project/: CMakeLists.txt
Msc_src/Voxelization_Project/src/: Cuboid.cpp  FileLoader.h  Integrator.cpp  MyViz.cpp  MyViz.h  OctreeComputation.cpp  OctreeComputation.h  Particle.cpp  Particle.h  Rigidbody.cpp  Utility.cpp  main.cpp  parameters.cpp  parameters.h
Msc_src/glviz/: CMakeLists.txt
Msc_src/glviz/include/: GLviz
Msc_src/glviz/src/: camera.hpp  glviz.cpp  glviz.hpp  shader.cpp  trackball.hpp
Msc_src/glviz/src/shader/: VoxelizationHybrid_vs.glsl  ambientOcclusionDeferredShading_fs.glsl  ambientOcclusionDeferredShading_vs.glsl  ambientOcclusion_fs.glsl  ambientOcclusion_voxel_fs.glsl  borderTransfer_cs.glsl  brickAllocator_cs.glsl  brickTagger_cs.glsl  default2_vs.glsl  default_fs.glsl  ds_geometryPass_fs.glsl  ds_geometryPass_vs.glsl  mesh3_fs.glsl  mesh3_gs.glsl  mesh3_vs.glsl  mipmapCorners_cs.glsl  mipmapEdges_cs.glsl  neighborAllocator_cs.glsl  occlusion_cs.glsl  octreeAlocator_cs.glsl  octreeClearer_cs.glsl  octreeDrawer_fs.glsl  octreeDrawer_gs.glsl  octreeDrawer_vs.glsl  volumeRendering_fs.glsl  voxelization_gs.glsl
New Wrapper/: CMakeLists.txt  IGDVersion.cmake
New Wrapper/Projects/: CMakeLists.txt
New Wrapper/Projects/Base_Template _v_0_0_1/: CMakeLists.txt
New Wrapper/Projects/Base_Template _v_0_0_1/src/: GPUTimer.h  GlobalDefines.h  MyViz.cpp  main.cpp
New Wrapper/Projects/Base_Template/src/: Timer.h  Utility.cpp
New Wrapper/Projects/Normal_Compression/src/: FileLoader.cpp  FileLoader.h  GPUTimer.cpp  MyViz.h  Timer.cpp  main.cpp  parameters.h  rply.c
New Wrapper/Projects/Voxelization_Project/: CMakeLists.txt  config.hpp.in
New Wrapper/Projects/Voxelization_Project/src/: Cuboid.h  FileLoader.cpp  GlobalDefines.h  Integrator.h  MyViz.cpp  MyViz.h  Rigidbody.h  Spring.cpp  Spring.h  Utility.cpp  main.cpp  md2model.cpp  md2model.h
New Wrapper/glviz/src/: buffer.cpp  buffer.hpp  camera.cpp  program.cpp  program.hpp  shader.hpp  trackball.cpp
New Wrapper/glviz/src/shader/: VoxelizationHybrid_fs.glsl  VoxelizationHybrid_gs.glsl  coneTrace_gs.glsl  default_vs.glsl  ds_geometryPass_gs.glsl  initOcclusion_cs.glsl  mesh3_fs.glsl  mesh3_gs.glsl  mesh3_vs.glsl  mipmapCenter_cs.glsl  mipmapFaces_cs.glsl  octreeFlagger_cs.glsl  voxelization_3DTexture_fs.glsl  voxelization_TriangleParallel_gs.glsl  voxelization_fs.glsl  voxelization_vs.glsl  writeLifeValues_cs.glsl
Website/cvstrap/: asd.txt  contact.html  cv.html  index - Kopie.html  index.html  projects#small.html  projects.html  projects_mobile.html
Website/cvstrap/Old/: index.html  projects.html  style.css
Website/cvstrap/css/: fonts.css  style.css
Website/cvstrap/img/SG/: Thumbnail_2.psd
Website/cvstrap/js/: page.js  scripts.js
